--- a/chart_AWill_OF2.html
+++ b/chart_AWill_OF2.html
@@ -10,7 +10,12 @@
 <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/maps/modules/export-data.js"></script>
 
-<script>/**
+<script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
+
+<script>
+var pymChild = new pym.Child();
+
+/**
 * @namespace JCHS
 */
 
