add callback to explicitly send height to parent on load

--- a/chart_AWill_OF2.html
+++ b/chart_AWill_OF2.html
@@ -641,6 +641,6 @@ function createChart_AWill_OF2() {
         legend: { y: -45 },
         credits: { position: { y: -190 } }
       } //end exporting
-    } })); //end chart
+    } }), pymChild.sendHeight()); //end chart
 } //end createChart_AWill_OF2()
 </script>
