--- a/chart_AWill_OF2.html
+++ b/chart_AWill_OF2.html
@@ -138,7 +138,7 @@
 <script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
 
 <script>
-var pymChild = new pym.Child();
+var pymChild = new pym.Child({ polling: 1000 });
 
 /**
 * @namespace JCHS
