remove callback on chart load

--- a/chart_AWill_OF2.html
+++ b/chart_AWill_OF2.html
@@ -766,6 +766,6 @@ function createChart_AWill_OF2() {
         legend: { y: -45 },
         credits: { position: { y: -190 } }
       } //end exporting
-    } }), pymChild.sendHeight()); //end chart
+    } })); //end chart
 } //end createChart_AWill_OF2()
 </script>
